--- a/static/signup.html
+++ b/static/signup.html
@@ -4,24 +4,29 @@
 </div>
 <div class="modal-body">
     <form id="dialog-template-form">
+        ${xsrf_form_html}
         <div class="form-group has-feedback">
-            <input type="handle" class="form-control" placeholder="User Handle (a-z, 0-9, Length < 32)">
+            <input name="handle" class="form-control" placeholder="User Handle (a-z, 0-9, Length <= 32)">
             <span class="glyphicon glyphicon-user form-control-feedback"></span>
         </div>
         <div class="form-group has-feedback">
-            <input type="password" class="form-control" placeholder="Password (Letters, digits, regular symbols)">
+            <input name="password" type="password" class="form-control" placeholder="Password (QWERTY letters, 6 <= Length <= 64)">
             <span class="glyphicon glyphicon-lock form-control-feedback"></span>
         </div>
         <div class="form-group has-feedback">
-            <input type="username" class="form-control" placeholder="Account name (Unicode)">
+            <input name="passwordretype" type="password" class="form-control" placeholder="Retype your password">
+            <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+        </div>
+        <div class="form-group has-feedback">
+            <input name="username" class="form-control" placeholder="Account name (Unicode)">
             <span class="glyphicon glyphicon-tag form-control-feedback"></span>
         </div>
         <div class="form-group has-feedback">
-            <input type="description" class="form-control" placeholder="User description (Unicode)">
+            <input name="description" class="form-control" placeholder="User description (Unicode)">
             <span class="glyphicon glyphicon-tags form-control-feedback"></span>
         </div>
         <div class="form-group has-feedback">
-            <input type="description" class="form-control" placeholder="Invitation Code (8 digits)">
+            <input name="invitecode" type="password" class="form-control" placeholder="Invitation Code (6 digits)">
             <span class="glyphicon glyphicon-share form-control-feedback"></span>
         </div>
         <div class="row"><div class="col-xs-12">
@@ -38,11 +43,24 @@
 </div>
 
 <script>
-
+$('#dialog-template-form').off('submit')
 $('#dialog-template-form').submit(function(event) {
     event.preventDefault();
-    $('#dialog-template-container').modal('hide');
-    return ;
+    var form_data = {};
+    var form_source = $(this).serializeArray();
+    for (var i = 0; i < form_source.length; i++)
+        form_data[form_source[i]['name']] = form_source[i]['value']
+    $.ajax({
+        method: 'POST',
+        url: '/user/operation_signup',
+        data: JSON.stringify(form_data),
+        dataType: "json",
+        complete: function(data) {
+            event.preventDefault();
+            $('#dialog-template-container-content').html(data.responseText)
+            bzsReloadMainIndex();
+            return ;
+        }
+    });
 });
-
 </script>
