--- a/static/index.html
+++ b/static/index.html
@@ -108,7 +108,7 @@ w<!DOCTYPE html>
                     <!-- Right control button. -->
                     <li id="navbar-back-button">
                         <a href="#">
-                            <span class="ion ion-arrow-left-c" style="font-size:20px"></span>
+                            <span class="ion ion-android-arrow-back" style="font-size:20px"></span>
                         </a>
                     </li>
                 </ul>
