--- a/static/preview_video.html
+++ b/static/preview_video.html
@@ -12,7 +12,7 @@
 <script src="/static/videojs/video.min.js"></script>
 
 <video id="bzs-video-preview" class="video-js vjs-default-skin" controls preload="auto" poster="" data-setup="{}" style="position:absolute; top:0px; right:0px; bottom:0px; left:0px; width:100%; height: 100%; overflow:hidden; border:hidden;">
-    <source src="/files/download/${file_hash}/${file_name_url}">
+    <source src="/files/download/${file_hash}/${file_name_url}" type="${file_mime}">
     <p class="vjs-no-js">
         To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
     </p>
