--- a/static/login_success.html
+++ b/static/login_success.html
@@ -4,6 +4,11 @@
 </div>
 <div class="modal-body">
     <p>
-        You have logged in to bzShare as <i>"${current_user_name}"</i>.
+        You have logged in to bzShare as <i>"${current_user.usr_name}"</i>.
     </p>
+    <p><div class="row"><div class="col-xs-12">
+        <button class="btn btn-success btn-block" onclick="javascript:bzsDialogTemplateUnload()">
+            Commence with bzShare
+        </button>
+    </div></div></p>
 </div>
