--- a/static/signup.html
+++ b/static/signup.html
@@ -6,7 +6,7 @@
     <form id="dialog-template-form">
         ${xsrf_form_html}
         <div class="form-group has-feedback">
-            <input name="handle" class="form-control" placeholder="User Handle (a-z, 0-9, Length <= 32)">
+            <input name="handle" class="form-control" placeholder="User Handle (a-z, 0-9, 3 <= Length <= 32)">
             <span class="glyphicon glyphicon-user form-control-feedback"></span>
         </div>
         <div class="form-group has-feedback">
